


add_subdirectory(base)
add_subdirectory(rt_system)

if(RTAI AND NOT ETHERCAT)
    add_subdirectory(ethercat_fake)
    message("************************************")
    message(STATUS "Ethercat is OFF : Virtual Meka")
    message("************************************")
elseif(RTAI AND ETHERCAT)
add_definitions(__ETHERCAT__)
    add_subdirectory(ethercat)
    message("************************************")
    message(STATUS "Ethercat is ON : Real Meka Hardware")
    message("************************************")
endif()
 
